--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,19 @@
   padding: 0;
   box-sizing: border-box;
   font-family: girlroy;
-  color: black;
+  color: #fff;
 }
 
 html,
 body {
   height: 100%;
   width: 100%;
-  background-color: black;
+}
+main{
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    padding: 20px;
 }
 circle{
   height: 300px;
